Set GDK scale explictily on wayland

On wayland we don't want to use the env vars as we send the scale via
wl_output scale.

If a user logs into X first we set these in our activation env to a
scaled value. If they then log into wayland afterwards they are still
set. Calling qunsetenv won't work as then we won't remove them from the
activation env.

Arguably it's working round a bug, but we don't have other options.

BUG: 438971